<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_qrcode" />
        <item
            android:id="@+id/nav_share_referal_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_share_referal_info" />
        <item
            android:id="@+id/nav_setting_link"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting_link" />
        <item
            android:id="@+id/nav_favourite_link"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_favourite_link" />
        <item
            android:id="@+id/nav_me_link"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_me_link" />
        <item
            android:id="@+id/nav_feedback_link"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_feedback_link" />
        <item
            android:id="@+id/nav_complaint_link"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_complaint_link" />
        <item
            android:id="@+id/nav_about_jomsave"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about_jomsave" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_logout" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
